[workspace]
members = [
    "contracts/*",
    "packages/*"
]
resolver = "2"

[workspace.dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw-utils = "1.0.3"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
cw-multi-test = "0.20.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true